--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="build/js/app.js"></script>
   </head>
   <body>
+    <div class="container">
     <h1>Dear diary,</h1>
     <form id="diary">
       <div class="form-group">
@@ -15,14 +16,14 @@
       </div>
       <div class="form-group">
         <label for="entry">Your entry:</label>
-        <input id="entry" class="form-control" type="text">
+        <input textarea rows="5" id="entry" class="form-control" type="text" ></textarea>
       </div>
       <button type="submit" class="btn">Submit</button>
       </form>
 
-    <div id="output">
-
-    </div>
-
-  </body>
+    <p><span id="printed-title"></span><br>
+      <span id="printed-entry"></span>
+    </p>
+  </div>
+</body>
 </html>
