add ability to print word count

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       </form>
 
     <p><span id="printed-title"></span><br>
-      <span id="printed-entry"></span>
+      <span id="printed-entry"></span> <br>
+      <span id="printed-wordcount"></span>
     </p>
   </div>
 </body>
